[gd_scene load_steps=16 format=3 uid="uid://b3pgmvh153oiw"]

[ext_resource type="Theme" uid="uid://7kt8u7jnbucu" path="res://themes/menu_theme.tres" id="1_4udlm"]
[ext_resource type="Script" path="res://scenes/Menus/settings.gd" id="2_8qw8b"]
[ext_resource type="PackedScene" uid="uid://cwlu6ibj0o1if" path="res://scenes/Menus/Buttons/Options/General/transition_change.tscn" id="3_ecfd2"]
[ext_resource type="PackedScene" uid="uid://e08acppryg86" path="res://scenes/Menus/Buttons/Options/General/custom_cursor_check_box.tscn" id="4_vau3y"]
[ext_resource type="PackedScene" uid="uid://cs7w0b21lchq4" path="res://scenes/Menus/Buttons/Options/Display/window_mode_button.tscn" id="5_m7eki"]
[ext_resource type="PackedScene" uid="uid://vup8lw5ftlb6" path="res://scenes/Menus/Buttons/Options/Display/v_sync_mode_button.tscn" id="6_ngpfd"]
[ext_resource type="PackedScene" uid="uid://cya0lav5lfdc" path="res://scenes/Menus/Buttons/Options/Audio/master_volume_slider.tscn" id="7_cfeg0"]
[ext_resource type="PackedScene" uid="uid://b5its7t2tsbqm" path="res://scenes/Menus/Buttons/Options/Audio/music_volume_slider.tscn" id="8_s1qid"]
[ext_resource type="PackedScene" uid="uid://rcigobqmob18" path="res://scenes/Menus/Buttons/Options/Audio/sfx_volume_slider.tscn" id="9_h603s"]
[ext_resource type="PackedScene" uid="uid://b68c0wb2av138" path="res://scenes/Menus/Buttons/Options/Controls/use_mouse.tscn" id="10_1it5o"]
[ext_resource type="PackedScene" uid="uid://dqyfr621sut7s" path="res://scenes/Menus/Buttons/Options/Extra/amplify_check_box.tscn" id="10_vfq8a"]
[ext_resource type="PackedScene" uid="uid://bueuv504gyu84" path="res://scenes/Menus/Buttons/audio_button.tscn" id="11_msf6t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k8x64"]

[sub_resource type="InputEventAction" id="InputEventAction_pm11u"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_2fxln"]
events = [SubResource("InputEventAction_pm11u")]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme = ExtResource("1_4udlm")
script = ExtResource("2_8qw8b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
material = SubResource("ShaderMaterial_k8x64")
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1
current_tab = 3
clip_tabs = false

[node name="General" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/General"]
layout_mode = 2

[node name="TransitionDropdown" parent="MarginContainer/VBoxContainer/TabContainer/General/VBoxContainer" instance=ExtResource("3_ecfd2")]
layout_mode = 2
size_flags_horizontal = 1
focus_mode = 2

[node name="CustomCursorCheckBox" parent="MarginContainer/VBoxContainer/TabContainer/General/VBoxContainer" instance=ExtResource("4_vau3y")]
layout_mode = 2

[node name="Display" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Display"]
layout_mode = 2

[node name="WindowModeButton" parent="MarginContainer/VBoxContainer/TabContainer/Display/VBoxContainer" instance=ExtResource("5_m7eki")]
layout_mode = 2
size_flags_vertical = 0

[node name="VSyncModeButton" parent="MarginContainer/VBoxContainer/TabContainer/Display/VBoxContainer" instance=ExtResource("6_ngpfd")]
layout_mode = 2

[node name="Audio" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="MasterVolumeSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("7_cfeg0")]
layout_mode = 2

[node name="MusicVolumeSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("8_s1qid")]
layout_mode = 2

[node name="SFXVolumeSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("9_h603s")]
layout_mode = 2

[node name="Controls" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controls"]
layout_mode = 2

[node name="UseMouse" parent="MarginContainer/VBoxContainer/TabContainer/Controls/VBoxContainer" instance=ExtResource("10_1it5o")]
layout_mode = 2

[node name="Extra" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 4

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Extra"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Extra/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "PROCEED WITH CAUTION"
horizontal_alignment = 1

[node name="AmplifyCheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Extra/HBoxContainer" instance=ExtResource("10_vfq8a")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Reset" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("11_msf6t")]
layout_mode = 2
text = "Reset"

[node name="Back" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("11_msf6t")]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="AreYouSure" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.865
offset_top = -52.945
offset_right = 87.865
offset_bottom = 52.945
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AreYouSure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -33.0
offset_right = 72.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="AreYouSure/VBoxContainer"]
layout_mode = 2
text = "Are You Sure?"

[node name="HBoxContainer" type="HBoxContainer" parent="AreYouSure/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Cancel" type="Button" parent="AreYouSure/VBoxContainer/HBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_2fxln")
text = "Cancel"

[node name="Yes" type="Button" parent="AreYouSure/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Yes"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/TabContainer/General/VBoxContainer/TransitionDropdown" to="MarginContainer/VBoxContainer/TabContainer/General/VBoxContainer/TransitionDropdown" method="_on_focus_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="AreYouSure/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="AreYouSure/VBoxContainer/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
